# enoch

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  Zalewski-Enochian-Chess-of-the-Golden-Dawn.txt
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
docs/: architecture.md  enochian-arrays.md  enochian-coordinates.md  enochian-rules.md  enochian-rules.yaml
enoch-mcp/: README.md  pyproject.toml
enoch-mcp/src/enoch_mcp/: __init__.py  cli.py  server.py
history/: CLI_EXTENSIONS.md  HEADLESS_CLI_DESIGN.md  MCP_PLAN.md  NEXT_IMPROVEMENTS_2025-01-20.md  SESSION_SUMMARY.md  TUI_IMPROVEMENTS_2025-01-20.md  UI_BRAINSTORM_2025-01-20.md  UI_ISSUES_FOUND_2025-01-20.md  UI_TESTING_2025-01-20.md
src/: engine.rs  lib.rs  main.rs
src/engine/: ai.rs  arrays.rs  board.rs  game.rs  moves.rs  piece_kind.rs  types.rs
src/ui/: app.rs  ui.rs
tests/: enoch_moves.rs  enoch_rules.rs  enoch_serialization.rs  integration.rs  playtest.rs  ui_rendering.rs
tests/screenshots/: .gitignore  README.md
