[package]
name = "enoch"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ronaldsuwandi/enoch"
readme = "README.md"
license = "MIT"
rust-version = "1.80.0"
description = "Terminal based chess engine"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unused_imports = "allow"

[dev-dependencies]
