[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enoch-mcp"
version = "0.1.0"
description = "MCP server for Enochian Chess engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Enoch Contributors"}
]
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
enoch-mcp = "enoch_mcp.server:main"

[project.urls]
Homepage = "https://github.com/monistowl/enoch"
Repository = "https://github.com/monistowl/enoch"
